--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">About Canada</string>
     <string name="no_data_found">No data found</string>
+
+    <string name="no_internet">No network is available. Please try again later.</string>
 </resources>
